# iflix

./: .gitignore  README.md  build.sh  cleanup.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: rabbitmqClient.ts  redisClient.ts  server.ts  types.ts
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/app/[section]/: page.tsx
frontend/src/app/api/auth/: route.ts
frontend/src/app/api/auth/verify/: route.ts
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/movies/[id]/: route.ts
frontend/src/app/api/movies/[id]/interactions/: route.ts
frontend/src/app/api/movies/genre/[genreId]/: route.ts
frontend/src/app/api/movies/genres/: route.ts
frontend/src/app/api/movies/popular/: route.ts
frontend/src/app/api/movies/random/: route.ts
frontend/src/app/api/movies/recommendations/: route.ts
frontend/src/app/api/movies/serach/: route.ts
frontend/src/app/api/movies/trending/: route.ts
frontend/src/app/auth/: page.tsx
frontend/src/app/movies/[id]/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: ChatWidget.tsx
frontend/src/lib/: redis.ts  tmdb.ts  types.ts
workers/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
workers/app/: config.py  flink_job.py  inference_worker.py  preprocess.py  training_worker.py  training_worker_deepfm.py
workers/app/connect/: __init__.py  pinecone.py  rabbitmq.py  redis.py
