[project]
name = "workers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "pandas>=2.2.3",
    "pika>=1.3.2",
    "numpy==1.26.4",
    "scikit-surprise==1.1.4",
    "redis[hiredis]>=5.2.1",
    "scikit-learn>=1.6.1",
    "apache-flink>=2.0.0,<2.1.0",
    "pinecone>=6.0.2",
]

